refactor: 각 실행 차수에 해당하는 변수명 변경