@@ -3,43 +3,42 @@ package racingcar;
 import camp.nextstep.edu.missionutils.Randoms;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RacingManager {
 
     private final List<Car> cars;
-    private final int rounds;
-    private final List<RoundResult> results;
+    private final int stageCount;
+    private final List<StageResult> results;
 
-    public RacingManager(List<String> carNames, int round) {
+    public RacingManager(List<String> carNames, int stageCount) {
+        this.stageCount = stageCount;
         this.cars = carNames.stream()
                 .map(Car::new)
-                .collect(Collectors.toList());
-        this.rounds = round;
-        this.results = new ArrayList<>(round);
+                .toList();
+        this.results = new ArrayList<>(stageCount);
     }
 
     public List<Car> getCars() {
         return cars;
     }
 
-    public int getRounds() {
-        return rounds;
+    public int getStageCount() {
+        return stageCount;
     }
 
-    public List<RoundResult> startRace() {
-        for (int i = 0; i < rounds; i++) {
+    public List<StageResult> startRace() {
+        for (int i = 0; i < stageCount; i++) {
             cars.forEach(car -> {
                 int number = Randoms.pickNumberInRange(0, 9);
                 car.attemptMove(number);
             });
-            results.add(new RoundResult(cars));
+            results.add(new StageResult(cars));
         }
         return results;
     }
 
     public void printResult() {
-        for (RoundResult result : results) {
+        for (StageResult result : results) {
             result.print();
         }
         System.out.println();
